--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "5gsniffer/lib/googletest"]
 	path = 5gsniffer/lib/googletest
 	url = https://github.com/google/googletest.git
+[submodule "5gsniffer/lib/srsRANRF"]
+	path = 5gsniffer/lib/srsRANRF
+	url = git@github.com:NorbLd/srsRANRF.git
+	branch = vanilla
