--- a/.gitmodules
+++ b/.gitmodules
@@ -3,5 +3,5 @@
 	url = https://github.com/google/googletest.git
 [submodule "5gsniffer/lib/srsRANRF"]
 	path = 5gsniffer/lib/srsRANRF
-	url = git@github.com:NorbLd/srsRANRF.git
+	url = https://github.com/NorbLd/srsRANRF.git
 	branch = vanilla
