Remote flow protobuf branch merge and various fixes - Fix file permissions for source files (755 to 644) - Add protobuf as dependency. This is used for communication with remote nodes - Move get_pdcch_coreset0 from bandwidth_part.cc to pdcch.cc - Use only pdcch_config to pass options to channel_mapper to remove dependency on phy struct - Rework flow and flow_pool to support dynamically joining remote hosts - Fix segfault in ofdm.cc that happens when an empty sample vector is passed - Update README.md with instructions for distributed processing - Add .gitignore

--- a/5gsniffer/CMakeLists.txt
+++ b/5gsniffer/CMakeLists.txt
@@ -84,6 +84,9 @@ link_directories(${INSTALL_DIR}/src/srsRAN-build/lib/src/pdcp)
 add_compile_definitions(SPDLOG_FMT_EXTERNAL)
 find_package(spdlog REQUIRED)
 
+# Add protobuf
+find_package(Protobuf REQUIRED)
+
 ########################################################################
 # Add general includes and dependencies
 ########################################################################
