--- a/5gsniffer/test/CMakeLists.txt
+++ b/5gsniffer/test/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable(${BINARY} ${TEST_SOURCES})
 
 add_test(NAME ${BINARY} COMMAND ${BINARY})
 
-target_link_libraries(${BINARY} PUBLIC ${CMAKE_PROJECT_NAME}lib gtest spdlog::spdlog liquid volk srsran_phy zmq)
+target_link_libraries(${BINARY} PUBLIC ${CMAKE_PROJECT_NAME}lib gtest spdlog::spdlog liquid volk srsran_phy zmq ${Protobuf_LIBRARIES})
 
 add_custom_command(
   TARGET ${BINARY}
